Anchor the first run bubble off the location bar icon's ImageView.

Currently anchors off the whole icon, which might be the centre of a
rectangular security chip.

Use LocationBarView::GetSecurityBubbleAnchorView(), same as other
bubbles. The FirstRunBubble constructor already offsets the anchor by
LOCATION_BAR_BUBBLE_ANCHOR_VERTICAL_INSET, like other bubbles anchoring
off the ImageView.

BUG=690361

Review-Url: https://codereview.chromium.org/2705323004
Cr-Commit-Position: refs/heads/master@{#452728}

Former-commit-id: 96752f23762f0ad4320bb4aa0737857b5fe582f3