chrome/browser/ui/views/location_bar/location_bar_view.cc
@@ -853,7 +853,7 @@ void LocationBarView::ShowFirstRunBubbleInternal() {
     return;
   Browser* browser = chrome::FindBrowserWithWebContents(web_contents);
   if (browser)
-    FirstRunBubble::ShowBubble(browser, location_icon_view_);
+    FirstRunBubble::ShowBubble(browser, GetSecurityBubbleAnchorView());
 #endif
 }
 
